<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- COMMON -->
    <string name="no_data">No data</string>
    <string name="cancel">Cancel</string>
    <string name="select_app">Select an app</string>
    <string name="image">Image</string>
    <string name="loading">Loading&#8230;</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="dont_save">Do not save</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>

    <!-- ACTIVITY -->
    <!-- OPEN -->
    <string name="open_retry">Retry</string>
    <string name="open_last_mod">Last modification</string>

    <!-- NEW PROJECT -->
    <string name="project_name">Project name</string>
    <string name="description">Description</string>
    <string name="create_project_button">Create</string>
    <string name="team">Team</string>

    <!-- GCP EDITOR -->
    <string name="altitude">Altitude</string>
    <string name="gcp_editor_name">Name</string>
    <string name="placemark">BASIC</string>
    <string name="coordinates">COORDINATES</string>
    <string name="done">Done</string>
    <string name="gps">GPS</string>
    <string name="accuracy">Accuracy</string>
    <string name="received">Received</string>
    <string name="extra">EXTRA</string>
    <string name="add_img">Add image</string>

    <!-- PROJECT -->
    <string name="tracker_start">Start Tracking</string>
    <string name="tracker_pause">Pause Tracking</string>
    <string name="tracker_stop">Stop Tracking</string>
    <string name="tracker_resume">Resume Tracking</string>
    <!-- ACTIVITY -->
    
    <!-- TRACKER -->
    <string name="cache_write_postponed">Cache writeout postponed</string>


    <!-- TITLES -->
    <string name="app_name">aPoints</string>
    <string name="title_open">Open Project</string>
    <string name="title_new_project">Create New Project</string>
    <string name="title_activity_new_gcp">Add new GCP</string>
    <string name="title_activity_edit_gcp">Edit GCP</string>

    <!-- MENU -->
    <!-- COMMON -->
    <string name="menu_new_project">New Project</string>
    <!-- COMMON -->
    <!-- PROJECT -->
    <string name="menu_open_project">Open Project</string>
    <string name="menu_open_kml">Open KML</string>
    <string name="share">Share</string>
    <!-- ACTIONBAR -->
    <string name="menu_add">Add GCP</string>
    <!-- ACTIONBAR -->
    <!-- PROJECT -->
    <!-- MENU -->


    <!-- CONTEXT MENU -->
    <string name="context_open">Open</string>
    <string name="context_delete">Delete</string>

    <!-- DIALOGS -->
    <!-- EXTERNAL STORAGE NOT FOUND -->
    <string name="dialog_ext_stor_title">External storage not found</string>
    <string name="dialog_ext_stor_message">It seems like your device is connected to computer.\nExternal storage (SD card) should be mounted to perform this operation.</string>
    <string name="gps_disabled_title">Gps disabled</string>
    <string name="gps_disabled_message">Gcp should be enabled in order to receieve location updates</string>
    <string name="missing_data_title">Missing data</string>
    <string name="missing_data_message">Please specify a name!</string>
    <string name="overwrite_title">A project with this name already exists!</string>
    <string name="overwrite_message">Do you want to overwrite it?</string>
    <string name="exit_sure_title">Do you really want to exit?</string>
    <string name="exit_sure_message">Tracking will be stopped!</string>
    <string name="not_saved_title">Project could not be saved</string>
    <string name="not_saved_message">There may be some corrupted data in the project</string>
    <string name="tracklog_name_title">You can name your tracklog</string>
    <string name="tracklog_name_message">This name will be showed by the map</string>
    <!-- DIALOGS -->

</resources>