<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".NewProject" >

        <TextView
            style="@style/EditText_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_name" />

        <EditText
            android:id="@+id/proj_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/project_name"
            android:inputType="textCapWords"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            style="@style/EditText_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/proj_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />

        <TextView
            style="@style/EditText_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team" />

        <EditText
            android:id="@+id/proj_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team"
            android:singleLine="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCreateProject"
            android:text="@string/create_project_button" />
    </LinearLayout>

</ScrollView>